syntax = "proto3";

package single_sign_on;

service AuthService {
    rpc VerifyToken (VerifyTokenParams) returns (AuthorizedUser);
};

message VerifyTokenParams {
    string token = 1;
    string clientId = 2;
}

message AuthorizedUser {
    string id = 1;
    string name = 2;
    string email = 3;
    string role = 4;
    string clientId = 5;
};
